--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "react-table",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-datatable",
+  "version": "1.0.0",
+  "author": "noguntuberu",
+  "repository": "https://github.com/noguntuberu/react-datatable.git",
+  "license": "MIT",
+  "description": "A simple, responsive react based datatable.",
+  "keywords": [
+    "react", 
+    "react-datatable", 
+    "datatable", 
+    "react dto", 
+    "react table", 
+    "react-tables", 
+    "react-data-table", 
+    "data-table"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -14,9 +27,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
-  },
+  }, 
   "eslintConfig": {
     "extends": [
       "react-app",
