--- a/.github/workflows/dev-push.yml
+++ b/.github/workflows/dev-push.yml
@@ -7,14 +7,22 @@ on:
   push:
     branches:
       - develop
-      - main
 
 jobs:
   test:
-    name: testing pushes on develop
-    runs-on: ubuntu-latest
+    name: prepare environment
+    runs-on: ubuntu-latest 
     steps:
-      - name: install dependencies
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: node setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          
+      - name: install npm dependencies
         run: npm install
-      - name: run test
+
+      - name: run tests
         run: npm run test
