--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-react-datatable",
   "version": "1.0.0",
-  "author": "noguntuberu",
+  "author": "Nathan Oguntuberu <nateoguns.work@gmail.com>",
   "repository": "https://github.com/noguntuberu/simple-react-datatable.git",
   "license": "MIT",
   "description": "A simple, responsive react based datatable.",
@@ -50,7 +50,6 @@
     ]
   },
   "devDependencies": {
-    "enzyme-adapter-react-16": "^1.15.6",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2"
   }
